test/files/neg/partestInvalidFlag.scala
//> using options -badCompilerFlag notAFlag -opt:badChoice
//
class C
